@@ -88,11 +88,11 @@ public class MicrosoftTokenResponse extends TokenResponse {
     /**
      * Set the session key JWE associated with this result, or null if none.
      *
-     * @param sesionKey the session key JWE associated with this result, or null if none.
+     * @param sessionKeyJwe the session key JWE associated with this result, or null if none.
      * @return
      */
-    public String setSessionKeyJwe(String sesionKey) {
-        return mSessionKeyJwe;
+    public void setSessionKeyJwe(final String sessionKeyJwe) {
+        mSessionKeyJwe = sessionKeyJwe;
     }
 
     /**
