@@ -1,5 +1,6 @@
 vNext
 ----------
+- [MINOR] Add JWT Claims to MicrosoftStsTokenRequest to support PRT v3 (#1969)
 
 V.10.1.1
 ----------
